--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
+    "lenis": "^1.3.3",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "react": "^19.1.0",
